istio-bookinfo/policy/auth-tcp/deny.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: tcp-policy
  namespace: author-tcp
spec:
  selector:
    matchLabels:
      app: http
  action: DENY
  rules:
  - to:
    - operation:
        ports: ["80"]
